[gd_scene load_steps=4 format=2]

[ext_resource path="res://forms/create_lobby_menu/CreateLobby.gd" type="Script" id=1]
[ext_resource path="res://fonts/joystix monospace.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 130
font_data = ExtResource( 2 )

[node name="CreateLobby" type="VBoxContainer"]
margin_left = 2.3916
margin_right = 1298.39
margin_bottom = 606.0
custom_constants/separation = 150
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1296.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
text = "Create lobby"
align = 1

[node name="FormContainer" type="VBoxContainer" parent="."]
margin_left = 398.0
margin_top = 306.0
margin_right = 898.0
margin_bottom = 606.0
rect_min_size = Vector2( 500, 300 )
size_flags_horizontal = 4
size_flags_vertical = 5
custom_constants/separation = 20

[node name="LobbyName" type="LineEdit" parent="FormContainer"]
margin_right = 500.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
clear_button_enabled = true
placeholder_text = "Lobby name"
caret_blink = true

[node name="CreateLobby" type="Button" parent="FormContainer"]
margin_top = 106.0
margin_right = 500.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Create lobby"

[node name="Back" type="Button" parent="FormContainer"]
margin_top = 212.0
margin_right = 500.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Back"
